--- a/service.css
+++ b/service.css
@@ -46,10 +46,15 @@
     text-align: center;
 }
 .logo{
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 120px;
     width: 20%;
     position:absolute;
+}
+.imagelogo{
+    margin:1px;
+    padding:10px;
+    width: 70%;
 }
 .fontstyle{
     font-size: 30px;
